Study: fixed bug where adding classpath could cause a deadlock